fix alignments and line-height

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,6 +47,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	margin-inline: auto;
 	max-width: 80ch;
+	line-height: 1.6;
 }
 
 input,
@@ -107,7 +108,6 @@ pre > code {
 
 code {
 	overflow: auto;
-	padding: .2rem;
 }
 
 ul {
@@ -144,6 +144,7 @@ textarea {
 }
 
 a[data-type=button] {
+	line-height: normal;
 	text-decoration: none;
 }
 
@@ -187,6 +188,11 @@ input[type=checkbox] {
 
 input[type=radio] {
 	border-radius: 50%;
+}
+
+code,
+table tr {
+	padding: .2rem;
 }
 
 input,
@@ -310,6 +316,7 @@ table td {
 table td::before {
 	content: attr(data-label);
 	float: left;
+	line-height: 2.3em;
 }
 
 table tr + tr,
